# ma-sinafadavi-thesis

./: # Master's Thesis Ideas Comparison: Data.md  1_UCP_ARCHITECTURE_DIAGRAM.md  2_LAMPORT_THEORY_DIAGRAM.md  3_THESIS_IDEA_DIAGRAM.md  4_PHASE_IMPLEMENTATION_DIAGRAM.md  4_PHASE_UCP_DATA_REPLICATION_SOLUTION.md  COMPLETE_SYSTEM_PROOF.md  COMPREHENSIVE_VALIDATION_REPORT.md  EXACT_DATA_REPLICATION_IMPROVEMENT_EXPLANATION.md  FINAL_TASK_STRUCTURE_EXPLANATION.md  IMPLEMENTATION_PLAN.md  LIVE_PROOF_COMPLETE.md  PERFORMANCE_BENCHMARK_RESULTS.json  PHASE_COVERAGE_ANALYSIS.md  PROJECT_MASTER_DOCUMENTATION.md  PROJECT_STATUS_MATRIX.md  QUICK_RECOVERY_GUIDE.md  README.md  REAL_WORLD_EMERGENCY_RESPONSE_EXAMPLE.md  STEP_5_FINAL_COMPLETION_SUMMARY.md  Sina-LAMPORT_VECTOR_CLOCK_THEORY.md  Sina-VECTOR_CLOCK_CAUSAL_CONSISTENCY.md  TASK8_COMPLETION_REPORT.md  TASK_STRUCTURE_CLARIFICATION.md  THESIS_ALIGNMENT_VERIFICATION_REPORT.md  THESIS_ARCHITECTURE_DIAGRAM.md  UCP_ANALYSIS_REPORT.md  UCP_GAPS_COMPLETE_SUMMARY.md  UCP_PART_B_4_PHASE_COVERAGE_VERIFICATION.md  UCP_PART_B_COMPLETE_ANALYSIS.md  UCP_PART_B_COMPLIANCE.md  UCP_PART_B_COMPLIANCE_SUMMARY.md  UCP_PART_B_FINAL_COMPLIANCE_REPORT.json  UCP_RESEARCH_VALIDATION.md  backup_copilot_chat.sh  check_dependencies.py  complete_4phase_test.py  complete_4phase_validation.py  comprehensive_validation.py  comprehensive_validation_corrected.py  (+22 more)
.github/: copilot-instructions.md
Chat/: COMPLETE_TASK_FILE_CATEGORIZATION.md  CORE_FILES_IMPLEMENTATION_ORDER.md
Overleaf/: Sina**-LAMPORT_THEORY_PURE.md  Sina-Design-RESEARCH_PROPOSAL.md  (+2 more)
(+204 files in other folders)
