[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rec"
version = "0.1.0"
description = "Run jobs in a distributed, resilient local execution network."
#readme = "Readme.md"
requires-python = ">= 3.12"
dependencies = [
    # Core UCP dependencies
    "wasmtime",
    "uvicorn",
    "fastapi",
    "fastapi-pagination",
    "python-multipart",
    "requests",
    "psutil",
    "zeroconf",
    "pydantic",
    "readerwriterlock",
    
    # Vector Clock implementation dependencies
    "msgpack>=1.0.7",
    "msgpack-numpy>=0.4.8",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "cryptography>=41.0.0",
    "structlog>=23.1.0",
    
    # Development and testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.82.0",
]
authors = [
    {name = "Philipp Jahn", email = "jahnp@students.uni-marburg.de"},
    {name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de"}
]
maintainers = [
  {name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",

    "Programming Language :: Python :: 3.12",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[project.scripts]
rec = "rec.run:main"

[project.urls]
Repository = "https://github.com/umr-ds/resilient-edge-computing"
